# PineWheel.AI

./: README.md  pyproject.toml  requirements.txt
config/: config.py
docker/: Dockerfile
src/: app.py
src/graph/: database_handler.py  entity_relations.py  graph_builder.py  graph_utils.py
src/inference/: context_retriever.py  inference_pipeline.py  query_processor.py  response_generator.py
src/ingestion/: data_ingestion.py  entity_detection.py  graph_update.py  image_processor.py  text_parser.py
src/utils/: benchmarks.py  logging_setup.py
